Changed product table fields
