# docs/swagger.yaml
@@ -208,9 +208,9 @@ definitions:
     properties:
       category_id:
         type: integer
-      description:
+      color:
         type: string
-      dimensions:
+      description:
         type: string
       image_url:
         type: string
@@ -222,6 +222,8 @@ definitions:
         type: string
       price:
         type: number
+      size:
+        type: string
       sku:
         type: string
       sort_order:
@@ -229,8 +231,6 @@ definitions:
       stock:
         minimum: 0
         type: integer
-      weight:
-        type: number
     required:
     - name
     - price
@@ -254,11 +254,11 @@ definitions:
         type: integer
       category_slug:
         type: string
+      color:
+        type: string
       created_at:
         type: string
       description:
-        type: string
-      dimensions:
         type: string
       id:
         type: integer
@@ -272,6 +272,8 @@ definitions:
         type: string
       price:
         type: number
+      size:
+        type: string
       sku:
         type: string
       sort_order:
@@ -280,16 +282,14 @@ definitions:
         type: integer
       updated_at:
         type: string
-      weight:
-        type: number
     type: object
   models.ProductUpdateRequest:
     properties:
       category_id:
         type: integer
-      description:
+      color:
         type: string
-      dimensions:
+      description:
         type: string
       image_url:
         type: string
@@ -301,6 +301,8 @@ definitions:
         type: string
       price:
         type: number
+      size:
+        type: string
       sku:
         type: string
       sort_order:
@@ -308,8 +310,6 @@ definitions:
       stock:
         minimum: 0
         type: integer
-      weight:
-        type: number
     type: object
   models.UserCreateRequest:
     properties:
